fixed stuck in sign in step issue

--- a/src/main/www/src/less/App.less
+++ b/src/main/www/src/less/App.less
@@ -176,6 +176,16 @@ html {
     }
   }
 
+  .btn {
+    a {
+      text-decoration: none;
+      color: inherit;
+    }
+    a:visited {
+      color: inherit;
+    }
+  }
+
   .step-span {
     width: 50px;
     height: 50px;
